Bug 269814 - kde service krashed on blueman-manager start
Summary: kde service krashed on blueman-manager start
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-31 11:43 UTC by Alexandr
Modified: 2011-10-07 23:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.6
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (5.74 KB, text/plain)
2011-04-03 17:27 UTC, Alexandr
Details
New crash information added by DrKonqi (5.44 KB, text/plain)
2011-04-10 06:46 UTC, Alexandr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandr 2011-03-31 11:43:28 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.6.1 (4.6.1)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-gentoo-r1 x86_64
Distribution: "Gentoo Base System release 2.0.2"

-- Information about the crash:
- What I was doing when the application crashed:

i am started blueman-manager from console, and application work as excepted.

-- Backtrace:
Application: Служба KDE (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f7b74711760 (LWP 6255))]

Thread 3 (Thread 0x7f7b58c2d700 (LWP 6260)):
#0  0x00007f7b6ebaf755 in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#1  0x00007f7b6ebb06e9 in g_main_context_iterate.clone.6 () from /usr/lib64/libglib-2.0.so.0
#2  0x00007f7b6ebb0d8d in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007f7b733bbed6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007f7b73390322 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007f7b73390564 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007f7b732a66a4 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007f7b732a8ef5 in QThreadPrivate::start(void*) () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007f7b6519eae3 in ?? () from //usr/lib64/opengl/nvidia/lib/libGL.so.1
#9  0x00007f7b73018d4c in start_thread () from /lib64/libpthread.so.0
#10 0x00007f7b71db138d in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7f7b53fff700 (LWP 6265)):
#0  0xffffffffff600108 in ?? ()
#1  0x00007fff70bff7a1 in ?? ()
#2  0x00007f7b6ee8a2f3 in clock_gettime () from /lib64/librt.so.1
#3  0x00007f7b732f9bc2 in qt_gettime() () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007f7b733bc8cd in QTimerInfoList::updateCurrentTime() () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007f7b733bcc45 in QTimerInfoList::timerWait(timeval&) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007f7b733bb6bc in timerSourcePrepareHelper(GTimerSource*, int*) () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007f7b733bb765 in timerSourcePrepare(_GSource*, int*) () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007f7b6ebaf7d6 in g_main_context_prepare () from /usr/lib64/libglib-2.0.so.0
#9  0x00007f7b6ebb06e9 in g_main_context_iterate.clone.6 () from /usr/lib64/libglib-2.0.so.0
#10 0x00007f7b6ebb0d8d in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#11 0x00007f7b733bbed6 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#12 0x00007f7b73390322 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#13 0x00007f7b73390564 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#14 0x00007f7b732a66a4 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#15 0x00007f7b73371f08 in QInotifyFileSystemWatcherEngine::run() () from /usr/lib64/qt4/libQtCore.so.4
#16 0x00007f7b732a8ef5 in QThreadPrivate::start(void*) () from /usr/lib64/qt4/libQtCore.so.4
#17 0x00007f7b6519eae3 in ?? () from //usr/lib64/opengl/nvidia/lib/libGL.so.1
#18 0x00007f7b73018d4c in start_thread () from /lib64/libpthread.so.0
#19 0x00007f7b71db138d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7f7b74711760 (LWP 6255)):
[KCrash Handler]
#6  0x00007f7b59377a72 in ObexSession::setStatus(ObexSession::Status const&) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#7  0x00007f7b59375c21 in ObexFtpDaemon::SessionConnected(QDBusObjectPath) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#8  0x00007f7b5936e976 in ObexFtpDaemon::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#9  0x00007f7b733a5637 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#10 0x00007f7b5937a8d5 in OrgOpenobexManagerInterface::SessionConnected(QDBusObjectPath const&) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#11 0x00007f7b5937abf4 in OrgOpenobexManagerInterface::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#12 0x00007f7b701acb5a in QDBusConnectionPrivate::deliverCall(QObject*, int, QDBusMessage const&, QList<int> const&, int) () from /usr/lib64/qt4/libQtDBus.so.4
#13 0x00007f7b701b6eaf in QDBusCallDeliveryEvent::placeMetaCall(QObject*) () from /usr/lib64/qt4/libQtDBus.so.4
#14 0x00007f7b733a513a in QObject::event(QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#15 0x00007f7b72538f04 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#16 0x00007f7b7253da8a in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#17 0x00007f7b7412b2e6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#18 0x00007f7b73390f5b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#19 0x00007f7b73394714 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/qt4/libQtCore.so.4
#20 0x00007f7b733bbce3 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib64/qt4/libQtCore.so.4
#21 0x00007f7b6ebb030e in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#22 0x00007f7b6ebb0af8 in g_main_context_iterate.clone.6 () from /usr/lib64/libglib-2.0.so.0
#23 0x00007f7b6ebb0d8d in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#24 0x00007f7b733bbe7f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#25 0x00007f7b725de46e in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtGui.so.4
#26 0x00007f7b73390322 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#27 0x00007f7b73390564 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#28 0x00007f7b733949cb in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#29 0x00007f7b5fc29afa in kdemain () from /usr/lib64/libkdeinit4_kded4.so
#30 0x0000000000407643 in launch(int, char const*, char const*, char const*, int, char const*, bool, char const*, bool, char const*) ()
#31 0x0000000000409dce in main ()

Reported using DrKonqi
Comment 1 Alexandr 2011-04-03 17:27:13 UTC
Created attachment 58545 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.6.1 (4.6.1) using Qt 4.7.2

- What I was doing when the application crashed:

just another stack trace for this problem.

-- Backtrace (Reduced):
#6  0x00007fd682d92a72 in ObexSession::setStatus(ObexSession::Status const&) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#7  0x00007fd682d90c21 in ObexFtpDaemon::SessionConnected(QDBusObjectPath) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#8  0x00007fd682d89976 in ObexFtpDaemon::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/kde4/kded_obexftpdaemon.so
[...]
#10 0x00007fd682d958d5 in OrgOpenobexManagerInterface::SessionConnected(QDBusObjectPath const&) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#11 0x00007fd682d95bf4 in OrgOpenobexManagerInterface::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/kde4/kded_obexftpdaemon.so
Comment 2 Alex Fiestas 2011-04-03 22:53:55 UTC
Can you check from your package system what is your bluedevil version?

I can't reproduce this bug with latest master.

Thanks.
Comment 3 Alexandr 2011-04-10 06:46:09 UTC
Created attachment 58758 [details]
New crash information added by DrKonqi

kded4 ($Id$) on KDE Platform 4.6.2 (4.6.2) using Qt 4.7.2

- What I was doing when the application crashed:

send file to mobile phone with blueman

- Unusual behavior I noticed:

kde asked for root password after crash

-- Backtrace (Reduced):
#6  0x00007fd17a8d3a72 in ObexSession::setStatus(ObexSession::Status const&) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#7  0x00007fd17a8d1c21 in ObexFtpDaemon::SessionConnected(QDBusObjectPath) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#8  0x00007fd17a8ca976 in ObexFtpDaemon::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/kde4/kded_obexftpdaemon.so
[...]
#10 0x00007fd17a8d68d5 in OrgOpenobexManagerInterface::SessionConnected(QDBusObjectPath const&) () from /usr/lib64/kde4/kded_obexftpdaemon.so
#11 0x00007fd17a8d6bf4 in OrgOpenobexManagerInterface::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/kde4/kded_obexftpdaemon.so
Comment 4 Alex Fiestas 2011-10-07 23:18:54 UTC
Git commit 878e8db9ea6723a5f4d4cb40470b59fa1ec0af27 by Alex Fiestas.
Committed on 08/10/2011 at 01:18.
Pushed by afiestas into branch '1.0'.

Check if the session is ours before use it

BUG: 269814
FIXED-IN: 1.0.6

M  +5    -0    src/daemon/obexftpkded/ObexFtpDaemon.cpp

http://commits.kde.org/bluedevil/878e8db9ea6723a5f4d4cb40470b59fa1ec0af27
Comment 5 Alex Fiestas 2011-10-07 23:19:14 UTC
Git commit 0a733a502b17375abfd42aa07abe3f5b33253ee4 by Alex Fiestas.
Committed on 08/10/2011 at 01:18.
Pushed by afiestas into branch '1.1'.

Check if the session is ours before use it

BUG: 269814
FIXED-IN: 1.0.6

M  +5    -0    src/daemon/obexftpkded/ObexFtpDaemon.cpp

http://commits.kde.org/bluedevil/0a733a502b17375abfd42aa07abe3f5b33253ee4