Check if the session is ours before use it

BUG: 269814
FIXED-IN: 1.0.6